master - update demo page with default markup to present component features

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-<body>
-  <div id="app"></div>
+<body style="background-color:#fefbee; min-height:100vh;">
+  <main id="app"></main>
 </body>
 </html>
